Fix desktop formatting (keep left-aligned)

--- a/app.css
+++ b/app.css
@@ -10,7 +10,6 @@ body {
 #app {
 	width: 100%;
 	max-width: 600px;
-	margin: 0 auto;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -51,7 +50,9 @@ body {
 	cursor: pointer;
 	padding: 0.5rem;
 	border-radius: 4px;
-	transition: background-color 0.2s, color 0.2s;
+	transition:
+		background-color 0.2s,
+		color 0.2s;
 	font-size: 0.8rem;
 }
 
@@ -217,6 +218,7 @@ button.ok {
 	#han-container {
 		grid-template-columns: auto auto auto auto auto;
 		padding: 0.75rem;
+		justify-items: start;
 	}
 
 	.actions {
